--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.4.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    "npm": "^6.14.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
