--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -16,13 +16,11 @@
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
-<<<<<<< HEAD
-=======
-    "install": "^0.13.0",
->>>>>>> origin/Maryem-Branch
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
-    "npm": "^6.14.4"
+    "node-mandrill": "^1.0.1",
+    "npm": "^6.14.4",
+    "sendmail": "^1.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
