--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "proxy": "http://localhost:4070",
   "dependencies": {
-    "-": "0.0.1",
     "@ant-design/icons": "^4.1.0",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.2.0",
+    "antd": "^4.2.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "date-fns": "^2.14.0",
+    "hover.css": "^2.3.2",
+    "nodemailer": "^6.4.8",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -20,7 +26,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "uuid": "^8.0.0"
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
