--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-validator": "^6.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
-    "npm": "^6.14.4"
+    "npm": "^6.14.4",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
